[package]
name = "remo"
version = "0.1.2"
authors = ["Yasuaki Uechi <y@uechi.io>"]
edition = "2018"
license = "MIT"
description = "Nature Remo API client"
homepage = "https://github.com/uetchy/nature-remo-rs"
documentation = "https://github.com/uetchy/nature-remo-rs/blob/master/README.md"
repository = "https://github.com/uetchy/nature-remo-rs"
readme = "README.md"
keywords = ["nature-remo", "remo"]
exclude = [
  "/.travis.yml"
]

[dependencies]
reqwest = { version = "0.10.4", features = ["json"]}
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.52"
failure = "0.1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
